--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="image/png" href="https://avatars.mds.yandex.net/i?id=a4d285c7b1faa2ac9b90bec70e0c967851c1718f-4969143-images-thumbs&n=13" />
+    <link rel="shortcut icon" type="image/png"
+          href="https://avatars.mds.yandex.net/i?id=a4d285c7b1faa2ac9b90bec70e0c967851c1718f-4969143-images-thumbs&n=13"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Comfortaa:wght@300..700&family=Comic+Relief:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Tagesschrift&display=swap" rel="stylesheet">
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"-->
-<!--          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Comfortaa:wght@300..700&family=Comic+Relief:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Tagesschrift&display=swap"
+          rel="stylesheet">
+    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"-->
+    <!--          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
     <link rel="stylesheet" href="/static/css/base.css">
 
 
-<!--    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"-->
-<!--            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"-->
-<!--            crossorigin="anonymous"></script>-->
+    <!--    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"-->
+    <!--            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"-->
+    <!--            crossorigin="anonymous"></script>-->
 </head>
 <body>
 <form action="" method="post" novalidate>
-<header>
-    <nav>
-        <div class='inline'>
+    <header>
+        <nav>
+            <div class='inline'>
 
-            <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
-            <span class="pass"></span>
-            <span>
+                <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
+                <span class="pass"></span>
+                <span>
                 <input type="text" placeholder="Автор">
             </span>
-            <span class='width'>
+                <span class='width'>
                 <input type="text" placeholder="Название">
             </span>
-            <span class='padding_t1 find'>Найти</span>
-            <span class="pass"></span>
-            <span class="padding_t1 pro">Pro</span>
-            <span class='padding_t1 register'> Войти </span>
+                <span class='padding_t1 find'>Найти</span>
+                <span class="pass"></span>
+                <span class="padding_t1 pro">Pro</span>
+                {% if not current_user.is_authenticated %}
+                <a href='/signin'><span class='padding_t1 register'> Войти </span></a>
+                {% else %}
+                <a href="/logout"><span class='letter first'>{{current_user.username[0]}}</span><span
+                        class='letter other'>{{current_user.username[1:]}}</span></a>
+                {% endif %}
 
 
-        </div>
+            </div>
 
-    </nav>
+        </nav>
 
 
-</header>
-<main role="main" class="container">
+    </header>
+    <main role="main" class="container">
 
-</main>
+    </main>
 </form>
 </body>
 </html>
