--- a/src/templates/add_files.html
+++ b/src/templates/add_files.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Comfortaa:wght@300..700&family=Comic+Relief:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Tagesschrift&display=swap" rel="stylesheet">
     </head>
     <body>
+    <form method="post" enctype="multipart/form-data">
+
         <div class='inline'>
             <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
 
@@ -18,47 +20,32 @@
         </div>
 
         <div class='pass-height-20px'></div>
-
         <div class='sidebar'>
-        <form method="post" enctype="multipart/form-data">
             <label for='ffile'><span class='plus'>+</span>Загрузить</label>
-            <input type='file' id='ffile'>
-
-        </form>
-
+            <input type='file' id='ffile' name="files" multiple>
         </div>
-
 
 
         <div class='main-zone'>
             <div class='main-text'>Название:</div>
             <div class='inline'>
-            <input type='text'>
+                <input type='text' name="title" required>
+                {% if message != '' %}
+                    <span class='message'>{{message}}</span>
+                {% endif %}
             </div>
 
             <div class='pass-height-20px'></div>
 
             <div class='main-text'>Описание:</div>
             <div class='inline'>
-            <input type='text'>
+            <input type='text' name="description">
             </div>
             <hr class='main-hr'>
-
-            <div class='type-word'>Папки</div>
-            <div class='pass-height-20px'></div>
-
-            <div class='file-card'>
-                <div><img width="30" height="30" src="https://img.icons8.com/ios-filled/30/folder-invoices--v2.png" alt="folder-invoices--v2" class='img-directory'></div>
-                <span class='filename'>ubuntu</span>
-            </div>
 
             <div class='type-word'>Файлы</div>
             <div class='pass-height-20px'></div>
 
-            <div class='file-card'>
-                <div><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/100/file--v1.png" alt="file--v1" class='img-directory'></div>
-                <span class='filename'>ubuntu</span>
-            </div>
 
         </div>
 
@@ -76,11 +63,13 @@
 
         <div class="pass-height-10px"></div>
 
+        {% if not is_pro %}
         <div class='upgrade-storage'>
             <div class='upgrade-text'>
             Расширить хранилище
             </div>
         </div>
+        {% endif %}
 
         <div class='pass-height-10px'></div>
 
@@ -88,21 +77,17 @@
             <div class='storage-word'>Доступ</div>
             <hr class='storage'>
             <div class='other-text'>
-                <input type='checkbox'>
+                <input type='checkbox' name="is_private">
                 <label>Приватная</label>
 
                 <div class='pass-height-10px'></div>
-                <input type='password' placeholder="Пароль">
+                <input type='password' placeholder="Пароль" name="password">
             </div>
         </div>
 
         <div class='pass-height-10px'></div>
 
-        <div class='upgrade-storage'>
-            <div class='upgrade-text'>
-            Сохранить
-            </div>
-        </div>
-
+        <button type='submit' class="upgrade_storage"><span class='upgrade-text'>Сохранить</span></button>
+    </form>
     </body>
 </html>
