--- a/src/templates/add_files.html
+++ b/src/templates/add_files.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Comfortaa:wght@300..700&family=Comic+Relief:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Tagesschrift&display=swap" rel="stylesheet">
     </head>
     <body>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" autocomplete="off">
 
         <div class='inline'>
             <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
@@ -29,7 +29,7 @@
         <div class='main-zone'>
             <div class='main-text'>Название:</div>
             <div class='inline'>
-                <input type='text' name="title" required>
+                <input type='text' name="title" value="{{title_dir}}" required>
                 {% if message != '' %}
                     <span class='message'>{{message}}</span>
                 {% endif %}
@@ -39,12 +39,22 @@
 
             <div class='main-text'>Описание:</div>
             <div class='inline'>
-            <input type='text' name="description">
+            <input type='text' name="description" value="{{description}}">
             </div>
             <hr class='main-hr'>
 
             <div class='type-word'>Файлы</div>
             <div class='pass-height-20px'></div>
+
+            {% for file in files %}
+            <div class='file-card'>
+                <div><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/100/file--v1.png" alt="file--v1" class='img-directory'></div>
+                <span class='filename'>{{file}}</span>
+                <input type="checkbox" class='delete_checkbox' name="del_{{file}}" id="del_{{file}}">
+                <label for='del_{{file}}' class="delete_checkbox"></label>
+            </div>
+            <span class='pass-horizontal-10px'></span>
+            {% endfor %}
 
 
         </div>
@@ -77,11 +87,15 @@
             <div class='storage-word'>Доступ</div>
             <hr class='storage'>
             <div class='other-text'>
-                <input type='checkbox' name="is_private">
+                {% if is_private %}
+                <input type='checkbox' name="is_private" id="is_private" checked>
+                {% else %}
+                <input type='checkbox' name="is_private" id="is_private">
+                {% endif %}
                 <label>Приватная</label>
 
                 <div class='pass-height-10px'></div>
-                <input type='password' placeholder="Пароль" name="password">
+                <input type='password' placeholder="Пароль" name="password" autocomplete="new-password">
             </div>
         </div>
 
