--- a/src/templates/directories.html
+++ b/src/templates/directories.html
@@ -13,81 +13,84 @@
 </head>
 <body>
 <form action="" method="post" novalidate autocomplete="off">
-<nav>
-    <div class='inline'>
+    <nav>
+        <div class='inline'>
 
-        <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
-        <span>
+            <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
+            <span>
                 <input type="text" placeholder="Автор" value="{{query_author}}" name="author">
             </span>
-        <span class='width'>
+            <span class='width'>
                 <input type="text" placeholder="Название" value="{{query_cellname}}" name="cellname">
             </span>
-        <button type='submit' class='padding_t1 find'>Найти</button>
+            <button type='submit' class='padding_t1 find'>Найти</button>
 
-        {% if not current_user.is_authenticated %}
-        <a href='/signin'><span class='padding_t1 register'> Войти </span></a>
-        {% else %}
-        <a href="/logout"><span class='letter first'>{{current_user.username}}</span></a>
-        {% endif %}
+            {% if not current_user.is_authenticated %}
+            <a href='/signin'><span class='padding_t1 register'> Войти </span></a>
+            {% else %}
+            <a href="/logout"><span class='letter first'>{{current_user.username}}</span></a>
+            {% endif %}
 
 
-    </div>
-
-</nav>
-<div class='pass-height-20px'></div>
-
-<div class='sidebar'>
-
-    <div class='create-btn'><span class='plus'>+</span>Создать</div>
-
-</div>
-
-<div class='main-zone'>
-    <div class='main-text'>Ячейки</div>
-    <hr class='main-hr'>
-    {% for dir in directories %}
-    <div class='card'>
-        <div class='name-directory'>{{dir.cellname}}</div>
-        <hr>
-        <div class='second-line'>
-            <span>Автор: </span> <span class='author-name'>{{authors[dir.user_id]}}</span>
-            <span class='pass-width-40'></span>
-            <span>Создано: </span><span class='maked-date'>{{dir.created_date}}</span>
         </div>
-        <hr>
-        <div class='description'>Описание: {{dir.description}}</div>
+
+    </nav>
+    <div class='pass-height-20px'></div>
+    {% if current_user.is_authenticated %}
+    <div class='sidebar'>
+
+        <div class='create-btn'><span class='plus'>+</span>Создать</div>
 
     </div>
-    <div class="pass-height-20px"></div>
-    {% endfor %}
+    {% endif %}
+
+    <div class='main-zone'>
+        <div class='main-text'>Ячейки</div>
+        <hr class='main-hr'>
+        {% for dir in directories %}
+        <div class='card'>
+            <div class='name-directory'>{{dir.cellname}}</div>
+            <hr>
+            <div class='second-line'>
+                <span>Автор: </span> <span class='author-name'>{{authors[dir.user_id]}}</span>
+                <span class='pass-width-40'></span>
+                <span>Создано: </span><span class='maked-date'>{{dir.created_date}}</span>
+            </div>
+            <hr>
+            <div class='description'>Описание: {{dir.description}}</div>
+
+        </div>
+        <div class="pass-height-20px"></div>
+        {% endfor %}
+
+        <div class='pass-height-20px'></div>
+
+
+    </div>
 
     <div class='pass-height-20px'></div>
+    {% if current_user.is_authenticated %}
 
-
-</div>
-
-<div class='pass-height-20px'></div>
-
-<div class='storage-main'>
-    <div class='storage-word'>Хранилище</div>
-    <hr id='storage'>
-    <div class='other-text'>
-        Заполнено: {{used_memory}} ГБ
-        <div class='pass-height-10px'></div>
-        Доступно: {{available_memory}} ГБ
+    <div class='storage-main'>
+        <div class='storage-word'>Хранилище</div>
+        <hr id='storage'>
+        <div class='other-text'>
+            Заполнено: {{used_memory}} ГБ
+            <div class='pass-height-10px'></div>
+            Доступно: {{available_memory}} ГБ
+        </div>
     </div>
-</div>
 
-<div class="pass-height-10px"></div>
+    <div class="pass-height-10px"></div>
 
-{% if not is_pro %}
-<div class='upgrade-storage'>
-    <div class='upgrade-text'>
-        Расширить хранилище
+    {% if not is_pro %}
+    <div class='upgrade-storage'>
+        <div class='upgrade-text'>
+            Расширить хранилище
+        </div>
     </div>
-</div>
-{% endif %}
+    {% endif %}
+    {% endif %}
 </form>
 </body>
 </html>
