--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -10,8 +10,8 @@
           rel="stylesheet">
 </head>
 <body>
+<form action="" method="post" autocomplete="off">
 <main>
-    <form action="" method="post" novalidate>
         <div class='register-border'>
             <span class='filecell file'>File</span><span class='filecell cell'>Cell</span>
 
@@ -50,7 +50,7 @@
                 </button>
             </div>
         </div>
-    </form>
 </main>
+    </form>
 </body>
 </html>
