--- a/src/templates/view_files.html
+++ b/src/templates/view_files.html
@@ -38,8 +38,9 @@
     <div class='pass-height-20px'></div>
     {% if current_user.is_authenticated %}
     <div class='sidebar'>
-
+        <a href="/create_cell">
         <div class='create-btn'><span class='plus'>+</span>Создать</div>
+        </a>
 
     </div>
     {% endif %}
