--- a/src/static/css/add_files.css
+++ b/src/static/css/add_files.css
@@ -4,20 +4,20 @@ body{
 
 .filecell{
     font-size: 30px;
-    padding-top: 10px;
-
+    float: left;
 }
 .file{
     color:#9400ff;
     font-family: "Comic Relief", "system-ui";
     font-weight: 900;
-    padding-left: 10px;
+    float: left;
 }
 .cell{
     color:#0086ea;
     font-family: "Tagesschrift", system-ui;
     font-weight: 400;
     font-style: normal;
+    padding-top: 3px;
 }
 
 .plus{
@@ -206,11 +206,20 @@ input[type='password']{
     padding-left: 5px
 }
 
-.inline{
-    display: inline-block;
+
+#title{
+    background-color: aliceblue;
+    border-radius: 10px;
+    border: none;
+    border-color: black;
+    height: 30px;
+    padding-left: 10px;
+    margin-left: 10px;
+    width: 400px;
+    font-family: "Roboto Flex", sans-serif;
 }
 
-input[type='text']{
+#description{
     background-color: aliceblue;
     border-radius: 10px;
     border: none;
@@ -226,7 +235,7 @@ input[type='file']{
     display: none
 }
 
-button[type='submit']{
+#save{
     border-radius: 20px;
     height: 40px;
     width: 175px;
@@ -280,4 +289,39 @@ input[type='checkbox']:checked + label{
 
 #is_private + label{
     background: none;
-  }
+}
+
+.input-text{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 11px;
+    padding-bottom: 8px;
+    width: 20%;
+
+    height: 18px;
+    border-radius: 10px;
+    border-color: #ffffff;
+    font-size: 28px;
+    font-family: "Cascadia Code", sans-serif;
+    color: gray;
+    text-align: center;
+}
+
+.find{
+    font-size: 28px;
+    font-family: "Cascadia Code", sans-serif;
+    color: aliceblue;
+    background-color: #9400ff;
+    border-radius: 10px;
+}
+
+.padding_t1{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+nav{
+    text-align: center;
+}
