--- a/src/templates/add_files.html
+++ b/src/templates/add_files.html
@@ -14,7 +14,7 @@
 <body>
 <form method="post" enctype="multipart/form-data" autocomplete="off">
 
-     <nav>
+    <nav>
         <div class='inline'>
 
             <span class='filecell file'>File</span><span class="filecell cell">Cell</span>
@@ -94,9 +94,11 @@
 
     {% if not is_pro %}
     <div class='upgrade-storage'>
-        <div class='upgrade-text'>
-            Расширить хранилище
-        </div>
+        <a href="/enter_code">
+            <div class='upgrade-text'>
+                Расширить хранилище
+            </div>
+        </a>
     </div>
     {% endif %}
 
