--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,14 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&family=Comfortaa:wght@300..700&family=Comic+Relief:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Tagesschrift&display=swap"
           rel="stylesheet">
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <!--          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+
     <link rel="stylesheet" href="/static/css/base.css">
 
-
-    <!--    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"-->
-    <!--            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"-->
-    <!--            crossorigin="anonymous"></script>-->
 </head>
 <body>
 <form action="" method="post" novalidate autocomplete="off">
@@ -43,7 +38,7 @@
                     <span class="padding_t1 pro">Pro</span>
                 </a>
                 {% endif %}
-                <a href="/logout"><span class='letter first'>{{current_user.username}}</span></a>
+                <a href="/profile"><span class='letter first'>{{current_user.username}}</span></a>
                 {% endif %}
 
 
