--- a/src/templates/view_files.html
+++ b/src/templates/view_files.html
@@ -23,7 +23,7 @@
             <span class='width'>
                 <input type="text" placeholder="Название" value="{{query_cellname}}" name="cellname">
             </span>
-            <button type='submit' class='padding_t1 find'>Найти</button>
+            <button type='submit' class='padding_t1 find' name="search" value="True">Найти</button>
 
             {% if not current_user.is_authenticated %}
             <a href='/signin'><span class='padding_t1 register'> Войти </span></a>
@@ -53,6 +53,7 @@
             <div><img width="30" height="30" src="https://img.icons8.com/ios-glyphs/100/file--v1.png" alt="file--v1"
                       class='img-directory'></div>
             <span class='filename'>{{file}}</span>
+            <button type='submit' class='buttons download' name="download" value="{{file}}"></button>
         </div>
         <div class='pass-horizontal-10px'></div>
         {% endfor %}
