--- a/src/static/css/profile.css
+++ b/src/static/css/profile.css
@@ -5,6 +5,7 @@
     height: 374px;
     border: 3px solid;
     border-color: #0086ea;
+    transform: translate(0, +50%);
 }
 
 
@@ -97,4 +98,11 @@ button[type='submit']{
 .text{
     font-family: "Cascadia Code", sans-serif;
     color: gray;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    position: relative;
+
 }
