--- a/src/static/css/signin.css
+++ b/src/static/css/signin.css
@@ -5,6 +5,7 @@
     height: 388px;
     border: 3px solid;
     border-color: #0086ea;
+    transform: translate(0, +50%);
 }
 
 .secondrary{
@@ -14,7 +15,7 @@
 }
 
 .pass-height-30px{
-    padding-top: 10px;
+    padding-top: 185px;
 }
 
 .filecell{
@@ -116,4 +117,11 @@ button[type='submit']{
 }
 a {
     color: #0086ea;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    position: relative;
+
 }
